??? Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.24-1

* Do not attempt to re-resolve IP addresses

2008-01-23 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.23-1

* Apply bugfix supplied by Jima
- Ensure loading of hosts from user ssh config file is case insensitive

2008-01-23 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.22-1

* Update X resources class to allow use of terms other than XTerm
* Apply patch from Harald Weidner to stop error messages in Debian Etch
* Add in key shortcut (alt-h) to toggle history window
* Tidy up pod a little to highlight notes better
* Check terminal_font config for quotes and remove
* Enable use of "configure --sysconfdir=", defaults to /etc
* Revise host checking algorithm to take ssh_config files into account
* Revise username check used as part of host id to accept more chars
* Correct year value for previous two entries from 2008 to 2007

2007-11-28 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.21-1

* Implement a basic history window in the console (option -s)
* Fixed bug whereby username@ wasn't being used correctly

2007-11-26 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.20-1

* Move source repository frmo CVS to SVN on sourceforge
* Remove last digit of version number since not required with SVN
* Add in host menu option to close inactive windows
* Apply bugfixes suppled by Tony Mancill
- reset xrm switch in terminal_args 
- prevent warning messages being printed when keysyms arent found
- fixes for fvwm
- chekc for child process before sending kill
* Slight rewording of man page
* Add in option to use telnet as comms command (use 'ctel' to invoke script)
* Run through perltidy -b -i=2
* Appy patches frmo Klaus Ethgen
- Client dies when cannot write to pipe
- Sleeping and flushing in window manager to allow time to draw windows
- Fix pipe reading to not use undefined values
* Apply patches from Nicolas Simonds
- allow colons in hostnames
- allow -o option as per man page