@@ -19,5 +19,11 @@ Olivier Beyssac
 Rob Dawson
 Steve Roome
 D. Dumont
+Dan Wallis
+Jima
+Harald Weidner
+Klaus Ethgen
+Nicolas Simonds
+Peter Palfrader
 
 $Id$
